[package]
name = "todo_application"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
axum-auth = "0.8.1"
bson = "3.1.0"
chrono = {version="0.4.42"}
dotenvy = "0.15.7"
futures = "0.3.31"
mongodb = {version="3.4.1"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"